--- a/404.html
+++ b/404.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>Remembering Ranie</title>
+    <meta
+      name="description"
+      content="Remembering the life of Ranie Chalmers."
+    />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
