--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="Remembering the life of Ranie Chalmers."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /><meta property="og:image" content="/og-image.jpg" />
 
     <title>Remembering Ranie</title>
 
