--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="Remembering the life of Ranie Chalmers."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /><meta property="og:image" content="/og-image.jpg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /><meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <title>Remembering Ranie</title>
 
@@ -31,7 +31,7 @@
       // the single page app to route accordingly.
       (function(l) {
         if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
+          var decoded = l.search.slice(1).split('&').map(function(s) {
             return s.replace(/~and~/g, '&')
           }).join('?');
           window.history.replaceState(null, null,
